--- a/index/templates/index/plantilla.html
+++ b/index/templates/index/plantilla.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'index/index.html' %}
+
+{% block "header_block" %}
+<h1 class="mb-5">Plantilla disponible</h1>
+{% endblock "header_block" %}
+
+{% block "body_block" %}
+
     <h1>
         esta es mi plantilla!!!
     </h1>
     <h2>
         {{nombre}}
-    <h2>
-
-</body>
-</html>
+        <h2>
+            
+        </body>
+        </html>
+{% endblock "body_block"  %}
