--- a/index/templates/index/plantilla.html
+++ b/index/templates/index/plantilla.html
@@ -1,18 +1,8 @@
 {% extends 'index/index.html' %}
 
 {% block "header_block" %}
-<h1 class="mb-5">Plantilla disponible</h1>
+ <h1>paginitaaa<h1>
 {% endblock "header_block" %}
 
 {% block "body_block" %}
-
-    <h1>
-        esta es mi plantilla!!!
-    </h1>
-    <h2>
-        {{nombre}}
-        <h2>
-            
-        </body>
-        </html>
 {% endblock "body_block"  %}
