--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -23,7 +23,7 @@
                 <a class="navbar-brand" href={% url 'index' %}>Index</a>
                 <a class="navbar-brand" href={% url 'plantilla' %}>Plantilla</a>
                 <a class="navbar-brand" href={% url 'crear_cerrajero' %}>Crear Cerrajero</a>
-                <a class="navbar-brand" href='#' >Buscar Cerrajero</a>
+                <a class="navbar-brand" href= {% url 'lista_cerrajeros' %}>Lista Cerrajeros</a>
             </div>
         </nav>
         <!-- Masthead-->
