--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -23,6 +23,8 @@
                 <a class="navbar-brand" href={% url 'index' %}>Index</a>
                 <a class="navbar-brand" href={% url 'plantilla' %}>Plantilla</a>
                 <a class="navbar-brand" href={% url 'crear_cerrajero' %}>Crear Cerrajero</a>
+                <a class="navbar-brand" href={% url 'crear_futbolista' %}>Crear Futbolista</a>
+                <a class="navbar-brand" href={% url 'crear_profesor' %}>Crear Profesor</a>
                 <a class="navbar-brand" href= {% url 'lista_cerrajeros' %}>Lista Cerrajeros</a>
             </div>
         </nav>
