Se modifican las vistas de Profesionales,ubicando Crear y buscar en una sola vista

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -21,12 +21,9 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href={% url 'index' %}>Index</a>
-                <a class="navbar-brand" href={% url 'crear_cerrajero' %}>Crear Cerrajero</a>
-                <a class="navbar-brand" href={% url 'crear_futbolista' %}>Crear Futbolista</a>
-                <a class="navbar-brand" href={% url 'crear_profesor' %}>Crear Profesor</a>
-                <a class="navbar-brand" href= {% url 'lista_cerrajeros' %}>Buscar Cerrajeros</a>
-                <a class="navbar-brand" href= {% url 'lista_futbolistas' %}>Buscar Futbolistas</a>
-                <a class="navbar-brand" href= {% url 'lista_profesores' %}>Buscar Profesores</a>
+                <a class="navbar-brand" href={% url 'cerrajeros' %}>Cerrajeros</a>
+                <a class="navbar-brand" href= {% url 'futbolistas' %}>Futbolistas</a>
+                <a class="navbar-brand" href= {% url 'profesores' %}>Profesores</a>
 
             </div>
         </nav>
