--- a/profesionales/templates/profesionales/lista_cerrajeros.html
+++ b/profesionales/templates/profesionales/lista_cerrajeros.html
@@ -4,7 +4,10 @@
 {% endblock "header_block" %}
 
 {% block "body_block" %}
-
+    <p>
+        <a href={% url 'crear_cerrajero' %}>Crear cerrajero</a>
+    </p>
+    
     <form action = "" method = "get">
         {% csrf_token %}
         <table>
