--- a/profesionales/templates/profesionales/crear_cerrajero.html
+++ b/profesionales/templates/profesionales/crear_cerrajero.html
@@ -5,15 +5,18 @@
 
 {% block "body_block" %}
 
- <form action = "" method = "post">
-     {% csrf_token %}
-     <table>
-        {{form.as_table}}
-     </table>
-     
-     
-    <button>Crear</button>
- </form>
+   <p>
+      <a href={% url 'cerrajeros' %}>Volver</a>
+   </p>
+   <form action = "" method = "post">
+      {% csrf_token %}
+      <table>
+         {{form.as_table}}
+      </table>
+      
+      
+      <button>Crear</button>
+   </form>
 
 
 {% endblock "body_block"  %}
