--- a/profesionales/templates/profesionales/crear_profesor.html
+++ b/profesionales/templates/profesionales/crear_profesor.html
@@ -4,17 +4,19 @@
 {% endblock "header_block" %}
 
 {% block "body_block" %}
-
-<form action = "" method = "post">
-     
-     {% csrf_token %}
-     <table>
-        {{form.as_table}}
-     </table>
-     
-     
-    <button>Crear</button>
- </form>
+   <p>
+      <a href={% url 'profesores' %}>Volver</a>
+   </p>
+   <form action = "" method = "post">
+      
+      {% csrf_token %}
+      <table>
+         {{form.as_table}}
+      </table>
+      
+      
+      <button>Crear</button>
+   </form>
 
 
 {% endblock "body_block"  %}
