Se crearon las CBV para poder ver el detalle,editar y borrar cada profesional. Con sus respectivos botones de Volver

--- a/profesionales/templates/profesionales/lista_cerrajeros.html
+++ b/profesionales/templates/profesionales/lista_cerrajeros.html
@@ -19,7 +19,13 @@
     </form>
     
     {% for cerrajero in cerrajeros  %}
-        <li>{{cerrajero}}</li>
+        <li>
+            <a href={% url 'detalle_cerrajero' cerrajero.id %}>{{cerrajero}}</a>|
+            <a href={% url 'editar_cerrajero' cerrajero.id %}>Editar</a>|
+            <a href={% url 'borrar_cerrajero' cerrajero.id %}>Borrar</a>|
+            
+            
+        </li>
     {% endfor %}
 
 {% endblock "body_block"  %}
