--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -24,6 +24,13 @@
                 <a class="navbar-brand" href={% url 'cerrajeros' %}>Cerrajeros</a>
                 <a class="navbar-brand" href= {% url 'futbolistas' %}>Futbolistas</a>
                 <a class="navbar-brand" href= {% url 'profesores' %}>Profesores</a>
+                {% if request.user.is_authenticated %}
+                    <a class="navbar-brand" href= {% url 'logout' %}>Logout</a>
+                
+                {% else %}
+                    <a class="navbar-brand" href= {% url 'login' %}>Login</a>
+                
+                {% endif %}
 
             </div>
         </nav>
