--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -25,6 +25,7 @@
                 <a class="navbar-brand" href= {% url 'futbolistas' %}>Futbolistas</a>
                 <a class="navbar-brand" href= {% url 'profesores' %}>Profesores</a>
                 {% if request.user.is_authenticated %}
+                    <a class="navbar-brand" href= {% url 'editar_usuario' %}>Editar</a>
                     <a class="navbar-brand" href= {% url 'logout' %}>Logout</a>
                 
                 {% else %}
