Se agrega el campo tarjeta_presentacion a los modelos de profesionales,se descarga el ckeditor ,se implementa a las vistas  y se especifica en requirements.txt

--- a/profesionales/templates/profesionales/detalle_cerrajero.html
+++ b/profesionales/templates/profesionales/detalle_cerrajero.html
@@ -11,9 +11,10 @@
     </p>
     
     <p>
-        <li>Nombre: {{object.nombre}}</li>
-        <li>Apellido: {{object.apellido}}</li>
-        <li>Está desempleado: {{object.desempleado}}</li>
+        <li>Nombre : {{object.nombre}}</li>
+        <li>Apellido : {{object.apellido}}</li>
+        <li>Está desempleado : {{object.desempleado}}</li>
+        <li>Tarjeta de presentacion : {{object.tarjeta_presentacion | safe }}</li>
     
     </p>
 
