--- a/profesionales/templates/profesionales/detalle_futbolista.html
+++ b/profesionales/templates/profesionales/detalle_futbolista.html
@@ -14,6 +14,7 @@ extends 'index/index.html' %}
         <li>Nombre: {{object.nombre}}</li>
         <li>Apellido: {{object.apellido}}</li>
         <li>Está desempleado: {{object.club}}</li>
+        <li>Tarjeta de presentacion : {{object.tarjeta_presentacion | safe }}</li>
     
     </p>
 
