--- a/profesionales/templates/profesionales/detalle_profesor.html
+++ b/profesionales/templates/profesionales/detalle_profesor.html
@@ -14,6 +14,7 @@ extends 'index/index.html' %}
         <li>Nombre: {{profesor.nombre}}</li>
         <li>Apellido: {{profesor.apellido}}</li>
         <li>Está desempleado: {{profesor.curso}}</li>
+        <li>Tarjeta de presentacion : {{object.tarjeta_presentacion | safe }}</li>
     
     </p>
 
