--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -48,7 +48,7 @@
                             {% if Alerta %}
                                 {{Alerta}}
                             {% else %}
-                                <h1 class="mb-5">Bienvenidos a la pre entrega!</h1>
+                                <h1 class="mb-5"> Bienvenido a la entrega final! </h1>
                             {% endif %}
                             {% endblock header_text_block %}
                         </div>
