--- a/profesionales/templates/profesionales/crear_cerrajero.html
+++ b/profesionales/templates/profesionales/crear_cerrajero.html
@@ -11,6 +11,7 @@
    <form action = "" method = "post">
       {% csrf_token %}
       <table>
+         {{form.media}}
          {{form.as_table}}
       </table>
       
