--- a/profesionales/templates/profesionales/crear_futbolista.html
+++ b/profesionales/templates/profesionales/crear_futbolista.html
@@ -10,6 +10,7 @@
    <form action = "" method = "post">
       {% csrf_token %}
       <table>
+         {{form.media}}
          {{form.as_table}}
       </table>
       
