Se agrega a models el campo fecha_creacion, que permite saber la fecha en el que fue creado cada profesional

--- a/profesionales/templates/profesionales/detalle_profesor.html
+++ b/profesionales/templates/profesionales/detalle_profesor.html
@@ -15,6 +15,7 @@ extends 'index/index.html' %}
         <li>Apellido: {{profesor.apellido}}</li>
         <li>Está desempleado: {{profesor.curso}}</li>
         <li>Tarjeta de presentacion : {{object.tarjeta_presentacion | safe }}</li>
+        <li>Fecha de creacion : {{object.fecha_creacion}}</li>
     
     </p>
 
