--- a/profesionales/templates/profesionales/detalle_cerrajero.html
+++ b/profesionales/templates/profesionales/detalle_cerrajero.html
@@ -15,6 +15,7 @@
         <li>Apellido : {{object.apellido}}</li>
         <li>Está desempleado : {{object.desempleado}}</li>
         <li>Tarjeta de presentacion : {{object.tarjeta_presentacion | safe }}</li>
+        <li>Fecha de creacion : {{object.fecha_creacion}}</li>
     
     </p>
 
