--- a/profesionales/templates/profesionales/detalle_futbolista.html
+++ b/profesionales/templates/profesionales/detalle_futbolista.html
@@ -15,6 +15,7 @@ extends 'index/index.html' %}
         <li>Apellido: {{object.apellido}}</li>
         <li>Está desempleado: {{object.club}}</li>
         <li>Tarjeta de presentacion : {{object.tarjeta_presentacion | safe }}</li>
+        <li>Fecha de creacion : {{object.fecha_creacion}}</li>
     
     </p>
 
