--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -24,6 +24,7 @@
                 <a class="navbar-brand" href={% url 'cerrajeros' %}>Cerrajeros</a>
                 <a class="navbar-brand" href= {% url 'futbolistas' %}>Futbolistas</a>
                 <a class="navbar-brand" href= {% url 'profesores' %}>Profesores</a>
+                <a class="navbar-brand" href= {% url 'about' %}>Acerca de mi</a>
                 {% if request.user.is_authenticated %}
                     <a class="navbar-brand" href= {% url 'editar_usuario' %}>Editar</a>
                     <a class="navbar-brand" href= {% url 'logout' %}>Logout</a>
