Se modifican errores de crear profesionales

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -31,7 +31,7 @@
                 
                 {% else %}
                     <a class="navbar-brand" href= {% url 'login' %}>Login</a>
-                    <a class="navbar-brand" href= {% url 'registrarse' %}>Registrarse</a>
+                    <a class="navbar-brand" href= {% url 'registrarse' %}>SignUp!</a>
                 
                 {% endif %}
 
