--- a/profesionales/templates/profesionales/lista_cerrajeros.html
+++ b/profesionales/templates/profesionales/lista_cerrajeros.html
@@ -17,15 +17,17 @@
         
         <button>Buscar</button>
     </form>
-    
-    {% for cerrajero in cerrajeros  %}
-        <li>
-            <a href={% url 'detalle_cerrajero' cerrajero.id %}>{{cerrajero}}</a>|
-            <a href={% url 'editar_cerrajero' cerrajero.id %}>Editar</a>|
-            <a href={% url 'borrar_cerrajero' cerrajero.id %}>Borrar</a>|
-            
-            
-        </li>
-    {% endfor %}
-
+    {% if cerrajeros %}
+        {% for cerrajero in cerrajeros  %}
+            <li>
+                <a href={% url 'detalle_cerrajero' cerrajero.id %}>{{cerrajero}}</a>|
+                <a href={% url 'editar_cerrajero' cerrajero.id %}>Editar</a>|
+                <a href={% url 'borrar_cerrajero' cerrajero.id %}>Borrar</a>|
+                
+                
+            </li>
+        {% endfor %}
+    {% else %}
+            <p>No hay nada para mostrar aun</p>
+    {% endif %}
 {% endblock "body_block"  %}
