--- a/profesionales/templates/profesionales/lista_futbolistas.html
+++ b/profesionales/templates/profesionales/lista_futbolistas.html
@@ -16,15 +16,18 @@
         
         <button>Buscar</button>
     </form>
-    
-    {% for futbolista in futbolistas  %}
-        <li>
-
-            <a href={% url 'detalle_futbolista' futbolista.id %}>{{futbolista}}</a>|
-            <a href={% url 'editar_futbolista' futbolista.id %}>Editar</a>|
-            <a href={% url 'borrar_futbolista' futbolista.id %}>Borrar</a>|
-        
-        </li>
-    {% endfor %}
+    {% if futbolistas  %}
+        {% for futbolista in futbolistas  %}
+            <li>
+                
+                <a href={% url 'detalle_futbolista' futbolista.id %}>{{futbolista}}</a>|
+                <a href={% url 'editar_futbolista' futbolista.id %}>Editar</a>|
+                <a href={% url 'borrar_futbolista' futbolista.id %}>Borrar</a>|
+                
+            </li>
+        {% endfor %}
+    {% else %}
+        <p>No hay nada para mostrar aun</p>
+    {% endif %}
 
 {% endblock "body_block"  %}
