--- a/profesionales/templates/profesionales/lista_profesores.html
+++ b/profesionales/templates/profesionales/lista_profesores.html
@@ -16,15 +16,18 @@
         
         <button>Buscar</button>
     </form>
-    
-    {% for profesor in profesores  %}
-        <li>
-
-            <a href={% url 'detalle_profesor' profesor.id %}>{{profesor}}</a>|
-            <a href={% url 'editar_profesor' profesor.id %}>Editar</a>|
-            <a href={% url 'borrar_profesor' profesor.id %}>Borrar</a>|
-        
-        </li>
-    {% endfor %}
+    {% if profesores %}
+        {% for profesor in profesores  %}
+            <li>
+                
+                <a href={% url 'detalle_profesor' profesor.id %}>{{profesor}}</a>|
+                <a href={% url 'editar_profesor' profesor.id %}>Editar</a>|
+                <a href={% url 'borrar_profesor' profesor.id %}>Borrar</a>|
+                
+            </li>
+        {% endfor %}
+    {% else %}
+         <p>No hay nada para mostrar aun</p>
+    {% endif %}
 
 {% endblock "body_block"  %}
