Se arreglaron errores deal cargar Avatar,y se modificó el readme

--- a/index/templates/index/about.html
+++ b/index/templates/index/about.html
@@ -9,7 +9,7 @@
     <p style="text-align:center">
         <h3>Acerca de mi:</h3>
         <h5>Mi nombre es Matias Muñoz tengo 26 años actualmente me encuentro cursando la Tecnicatura Superior en Desarrollo de Software en el instituto de formacion tecnica superior n3(Caba,Buenos Aires) y como ya tenia bases en python,decidí hacer este curso de Django.</h5>
-        <h5>Actualmente trabajo en el area de administracion, y junto a unos amigos a fines en el 2020 decidimos abrir una microcerveceria. Me gustaria indagar mas sobre Django, y como utilizar DjangoRest ya que entiendo que es fundamental para el mercado </h5>
+        <h5>Actualmente trabajo en el area de administracion, y junto a unos amigos a fines del 2020 decidimos abrir una microcerveceria. Me gustaria indagar mas sobre Django, y como utilizar DjangoRest ya que entiendo que es fundamental para el mercado </h5>
     </p>
     
     <p>
