--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -20,13 +20,13 @@
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href={% url 'index' %}>Index</a>
+                <a class="navbar-brand" href={% url 'index' %}>Inicio</a>
                 <a class="navbar-brand" href={% url 'cerrajeros' %}>Cerrajeros</a>
                 <a class="navbar-brand" href= {% url 'futbolistas' %}>Futbolistas</a>
                 <a class="navbar-brand" href= {% url 'profesores' %}>Profesores</a>
                 <a class="navbar-brand" href= {% url 'about' %}>Acerca de mi</a>
                 {% if request.user.is_authenticated %}
-                    <a class="navbar-brand" href= {% url 'editar_usuario' %}>Editar</a>
+                    <a class="navbar-brand" href= {% url 'usuario_datos' %}>{{request.user.username}}</a>
                     <a class="navbar-brand" href= {% url 'logout' %}>Logout</a>
                 
                 {% else %}
