Se agrega el campo de imagen ficha_club al modelo de futbolista,y se modifican vistas y templates para poder visualizarla

--- a/accounts/templates/accounts/usuario_datos.html
+++ b/accounts/templates/accounts/usuario_datos.html
@@ -15,7 +15,7 @@
        <li>{{request.user.last_name}}</li>
        <li>{{request.user.email}}</li>
        {% if mas_datos.avatar %}
-       <li><img src="{{mas_datos.avatar.url}}" alt="Imagen de perfil"></li>
+       <li><img src="{{mas_datos.avatar.url}}" width="230" height="90" alt="Imagen de perfil"></li>
        {% endif %}
        <li>{{mas_datos.link}}</li>
     </p>
