--- a/profesionales/templates/profesionales/crear_futbolista.html
+++ b/profesionales/templates/profesionales/crear_futbolista.html
@@ -7,7 +7,7 @@
    <p>
       <a href={% url 'futbolistas' %}>Volver</a>
    </p>
-   <form action = "" method = "post">
+   <form action = "" method = "post" enctype='multipart/form-data'>
       {% csrf_token %}
       <table>
          {{form.media}}
