--- a/profesionales/templates/profesionales/futbolista_form.html
+++ b/profesionales/templates/profesionales/futbolista_form.html
@@ -10,10 +10,11 @@
         <a href={% url 'futbolistas' %}>Volver</a>
     </p>
     
-    <form action = "" method = "post">
+    <form action = "" method = "post" enctype='multipart/form-data'>
         {% csrf_token %}
         <table>
         {{form.as_table}}
+        {{form.media}}
         </table>
         
         
