Se corrige la edicion y visualizacion de los datos de usuario (registro)

--- a/accounts/templates/accounts/usuario_datos.html
+++ b/accounts/templates/accounts/usuario_datos.html
@@ -11,14 +11,16 @@
    </p>
 
    <p>
-       <li>{{request.user.first_name}}</li>
-       <li>{{request.user.last_name}}</li>
-       <li>{{request.user.email}}</li>
+       <li>Nombre : {{request.user.first_name}}</li>
+       <li>Apellido: {{request.user.last_name}}</li>
+       <li>Email: {{request.user.email}}</li>
        {% if mas_datos.avatar %}
-       <li><img src="{{mas_datos.avatar.url}}" width="230" height="90" alt="Imagen de perfil"></li>
-       {% endif %}
-       <li>{{mas_datos.link}}</li>
-    </p>
+            <li>Avatar: <img src="{{mas_datos.avatar.url}}" width="230" height="90" alt="Imagen de perfil"></li>
+        {% endif %}
+        {% if mas_datos.link %} #Se corrige la condicion del link !
+            <li>Link: {{mas_datos.link}}</li>
+        {% endif %}
+        </p>
 
    <a href = {% url 'editar_usuario' %}>Editar datos</a>
 
