Se borra comentario

--- a/accounts/templates/accounts/usuario_datos.html
+++ b/accounts/templates/accounts/usuario_datos.html
@@ -17,7 +17,7 @@
        {% if mas_datos.avatar %}
             <li>Avatar: <img src="{{mas_datos.avatar.url}}" width="230" height="90" alt="Imagen de perfil"></li>
         {% endif %}
-        {% if mas_datos.link %} #Se corrige la condicion del link !
+        {% if mas_datos.link %} 
             <li>Link: {{mas_datos.link}}</li>
         {% endif %}
         </p>
